# multi-pendulum

./: .gitignore  Cargo.toml  bezier.ipynb  index.html  index.ts  main.bib  main.tex  package-lock.json  package.json
crates/asset-utils/: Cargo.toml
crates/asset-utils/.cargo/: config
crates/asset-utils/src/: lib.rs  obj.rs  plane.rs
crates/pendulum/: Cargo.toml
crates/pendulum/src/: dynamics.rs  lib.rs  pendulum.rs
src/: lib.rs  renderer.rs  user_input.rs
src/assets/: fragment_shader.glsl  vertex_shader.glsl
