[workspace]
members = [
    ".",
    "crates/asset-utils",
    "crates/pendulum",
]

[package]
name = "multi-pendulum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "0.18"
bytemuck = { version = "1.7", features = ["derive"] }
itertools = "0.10"
memoffset = "0.6"
num-traits = "0.2"

glow = "0.11"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

#rand = "0.8"
#rand_pcg = "0.3"
#getrandom = { version = "0.2", features = ["js"] }

asset-utils = { path = "./crates/asset-utils" }
eom-sim = { git = "https://github.com/hinohi/rust-eom" }
pendulum = { path = "./crates/pendulum" }

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]
